--- a/kubernetes/productcatalogue-service.yaml
+++ b/kubernetes/productcatalogue-service.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: productcatalogue
-        image: danielbryantuk/djproductcatalogue:1.0
+        image: productcatalogue
         ports:
         - containerPort: 8020
         livenessProbe:
