--- a/kubernetes/shopfront-service.yaml
+++ b/kubernetes/shopfront-service.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: djshopfront
-        image: shopfront:1.0
+        image: shopfront
         ports:
         - containerPort: 8010
         livenessProbe:
