--- a/kubernetes/stockmanager-service.yaml
+++ b/kubernetes/stockmanager-service.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: stockmanager
-        image: danielbryantuk/djstockmanager:1.0
+        image: stockmanager
         ports:
         - containerPort: 8030
         livenessProbe:
